--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.4"
   },
   "private": true
