--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.6",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^50.0.0",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.3",
-    "react-native-web": "~0.18.11"
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.1",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.45",
     "@types/react-native": "^0.71.3",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
